--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react-dom": "^16.0.6",
     "@types/webpack": "^4.4.9",
     "@types/webpack-dev-server": "^2.9.5",
+    "css-loader": "^1.0.0",
+    "style-loader": "^0.21.0",
     "ts-loader": "^4.4.2",
     "typescript": "^3.0.1",
     "webpack": "^4.16.4",
